# WSRTI

./: .gitmodules  README.md
appclient/: client-ui.js  config.js  main.js  serializers.js  ws-command-handler.js  ws-event-handler.js  ws-server-event-handler.js
appclient/dep/: terminal_embedded.css
include/: wslog.h
serializer/: CMakeLists.txt  README.md
serializer/include/: BufferToVector.h  Serialize.h
test/: SerializerTest.cpp  req-rep.cpp
test/test_images/: genseq.cpp
webappclient/: .gitignore  .gitmodules
webappclient/appclient/: appclient.css  appclient.html  events.js  ws-imagestream-handler.js
webappclient/appclient/dep/: history.js  terminal.js
webappclient/test/: CMakeLists.txt
webappclient/test/appclient-test/: appclient-test.cpp
webappclient/test/test_images/seq/webp/: README.txt
websocketplus/include/: WSocketMServer.h
websocketplus/test/: req.html
